Fixed alignment of columns on source and site home pages.

--- a/profiles/scitalk/themes/scitalk_theme/css/components/views.css
+++ b/profiles/scitalk/themes/scitalk_theme/css/components/views.css
@@ -31,20 +31,20 @@ table.jrt {
   flex-direction: column;
 }
 
-.view-fix-heights.view-display,
-  .view-fix-heights .view-content > div {
+.view-fix-heights .view-content,
+  .view-fix-heights .view-content > div,
+  .view-fix-heights .view-display {
     display: flex;
     height: 100%;
     flex-direction: column;
   }
 
-.view-fix-heights .view-content,
-  .view-fix-heights .display-wrapper {
-    height: 100%;
+.view-fix-heights .view-content {
+    height: calc(100% - 6.3rem);
   }
 
-.view-fix-heights .more-link {
-    margin-top: 2rem;
+.view-fix-heights .display-wrapper {
+    height: 100%;
   }
 
 /* Taxonomy view (inline list of terms) */
